[package]
name = "parasol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
aliasable = "0.1.3"
profiling = "1.0.4"

[target.'cfg(loom)'.dependencies]
loom = "0.5.4"

[features]
tracy = ["profiling/profile-with-tracy"]

[dev-dependencies]
criterion = "0.3"

#[[bench]]
#name = "benchmark"
#harness = false
