[package]
name = "parasol"
version = "0.1.0"
description = "A multithreaded job scheduler"
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/nical/parasol"

[features]
tracy = ["profiling/profile-with-tracy"]

[dependencies]
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
aliasable = "0.1.3"
profiling = "1.0.4"

# The loom build does not work because a lot of crossbeam doesn't support it.
[target.'cfg(loom)'.dependencies]
loom = "0.5.4"

[dev-dependencies]
criterion = "0.3"

#[[bench]]
#name = "benchmark"
#harness = false
